Fix select, checkbox and radios in Safari
Safari on both iOS and macOS still requires the -webkit vendor prefix in order to style checkbox, radio and select elements.

--- a/doodle.css
+++ b/doodle.css
@@ -108,6 +108,7 @@
 }
 
 .doodle select {
+  -webkit-appearance: none;
   appearance: none;
   padding-right: 1.5em;
   background: url(caret.svg) no-repeat right transparent;
@@ -137,6 +138,7 @@
 }
 
 .doodle input[type="checkbox"], .doodle input[type="radio"] {
+  -webkit-appearance: none;
   appearance: none;
   outline: 0;
   background: transparent;
