update styling of file input button

--- a/doodle.css
+++ b/doodle.css
@@ -164,3 +164,15 @@
 .doodle input[type="checkbox"]:checked:after, .doodle input[type="radio"]:checked:after {
   content: "*";
 }
+
+.doodle input[type="file"]::file-selector-button {
+  font-family: inherit;
+  font-size: 0.8em;
+  font-size: 1em;
+  position: relative;
+  top: -2px;
+  margin-right: 8px;
+  border-radius: 255px 15px 225px 15px/15px 225px 15px 255px;
+  border-color: black;
+  border-width: 3px;
+}
